CB-29552 Need to do changes in the stop start upscale flow - Currently in the stop start upscale flow in the startInstancesHandler what we do is that first we get all the stopped nodes from CB end and from that list we pick up nodes randomly based on our need and after that go to cloud provider and check the status of them. In place of this first we need to get list of stop instances from CB and than first check their status on cloud provider and than based on that status we need to pick up nodes randomly by this we would be assured that we would try to start the maximum number of nodes we can. This happens because of a engesc we have received where from azure we are receiving powerState as null for some of the instances and we are afterwards omitting this instances.